--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="text-2xl">Greenden</h1>
 
 
-        <svg class="h-8 w-8 text-black-100 md:hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <svg id="menuicon" class="h-8 w-8 text-black-100 md:hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
 
@@ -36,6 +36,27 @@
         </ul>
 
     </nav>
+
+    <!--Side Navbar-->
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width: 50%; height: 100vh; right: -50%;">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+        
+        <ul class=" flex flex-col gap-10 text-gray-600 items-center ">
+            <li>
+                <a class="hover:underline hover:text-black" href="index.html">Home</a>
+            </li>
+
+            <li>
+                <a class="hover:underline hover:text-black" href="product.html">Prodect</a>
+            </li>
+
+            <li>
+                <a class="hover:underline hover:text-black" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </section>
 
     <!--Header Section-->
     <section class="bg-green-100 p-4 md:p-10 flex justify-center ">
@@ -187,6 +208,9 @@
         <p class="mt-5">@2021 Greenden.com</p>
 
     </section>
+
+
+    <script src="index.js"></script>
 
 </body>
 
